# MIA_01c_AR1

./: Informe.docx  README.md  pyproject.toml  summary.ipynb
TP1-QLearning/: TP1_QLearning_Informe.ipynb  requirements.txt  save_video.py  test.py  train.py
TP1-QLearning/results/: best_q_table.npy  final_q_table.npy  trial_results.csv
TP1-QLearning/taxi_env_qlearning/: .env  best_q_table.npy  q_table.npy  requirements.txt  save_video.py  taxi_env.py  test.py  train.py
TP1-QLearning/taxi_env_qlearning/results/: trial_results.csv
TP1-QLearning/taxi_env_qlearning/results/best_result/: step_by_step.mov
TP1-QLearning/utilidades/: algoritmos_rl.py  evaluate.py  generales.py  graficar.py  taxi_env.py  train.py
