[tool.poetry]
name = "mia-ar1"
version = "1.0"
description = "Trabajos para la materia de aprendizaje por refuerzo"
authors = ["Isidro Marco Joel <marcojoelisidro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.4"
matplotlib = "^3.10.1"
optuna = "^4.2.1"
pygame = "^2.6.1"
scikit-learn = "^1.6.1"
pandas = "^2.2.3"
imageio = "^2.37.0"
tabulate = "^0.9.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
